<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_digital">

    <fragment
        android:id="@+id/navigation_digital"
        android:name="com.jakting.news.ui.digital.DigitalFragment"
        android:label="@string/title_digital"
        tools:layout="@layout/fragment_digital" />

    <fragment
        android:id="@+id/navigation_phone"
        android:name="com.jakting.news.ui.science.ScienceFragment"
        android:label="@string/title_phone"
        tools:layout="@layout/fragment_science" />

    <fragment
        android:id="@+id/navigation_science"
        android:name="com.jakting.news.ui.phone.PhoneFragment"
        android:label="@string/title_science"
        tools:layout="@layout/fragment_phone" />

    <fragment
        android:id="@+id/navigation_finance"
        android:name="com.jakting.news.ui.finance.FinanceFragment"
        android:label="@string/title_finance"
        tools:layout="@layout/fragment_finance" />
    <fragment
        android:id="@+id/navigation_me"
        android:name="com.jakting.news.ui.me.MeFragment"
        android:label="@string/title_me"
        tools:layout="@layout/fragment_me" />
</navigation>